<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/etCounty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/county"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPostcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postcode"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/etChargerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/charger_type"
            android:inputType="text" />

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>
</ScrollView> 